services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: 8080
  selector:
    app: code-server
